# actix-templates

./: .gitignore  README.md
basic/: Cargo.toml
diesel/: Cargo.toml
diesel/src/: main.rs
diesel/src/lib/: connection.rs  mod.rs
