[package]
name = "basic"
version = "0.1.0"
authors = ["test"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-rt = "1"
actix-files = "0.4"
actix-service = "1.0.5"
log = "0.4.8"
log4rs = "0.13.0"
futures = "0.3.5"
listenfd = "0.3"
env_logger = "0.7"
dotenv = "0.9.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }